--- a/project.config
+++ b/project.config
@@ -4,6 +4,9 @@
 	owner = group user/HyejungKwon (cjscld15)
 	owner = group user/Nexell Jenkins (nxJenkins)
 	owner = group user/Sungwoo Park (swpark)
+	owner = group user/hokahie
+	owner = group user/jung hyun kim (nxrohan)
+	owner = group user/mcjino21
 	owner = group user/raypark714
 [access "refs/for/refs/*"]
 	read = group user/HyejungKwon (cjscld15)
