--- a/project.config
+++ b/project.config
@@ -2,6 +2,7 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group user/Eric.park (pjsin)
+	owner = group user/Hyunseok Jung (aronjung)
 	owner = group user/Nexell Jenkins (nxJenkins)
 	owner = group user/SeongO Park (raypark714)
 	owner = group user/allan park (mcjino21)
