--- a/project.config
+++ b/project.config
@@ -25,6 +25,7 @@
 [access "refs/tags/*"]
 	push = group user/cjscld15
 	push = +force group user/cjscld15
+	push = group user/mingyoungbo
 [receive]
 	requireSignedOffBy = true
 	requireChangeId = true
